Added bootstrap and alerts for errors
Signed-off-by: Rillian Grant <rillian.grant@hotmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>File Browser</title>
     <link rel="manifest" href="/manifest.json">
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
@@ -9,7 +10,10 @@
   <body>
     <header>
       <h1>File Browser</h1>
+      <link rel="stylesheet" href="other/css/bootstrap.min.css">
     </header>
+
+    <div id="alerts"></div>
 
     <div id="main">
         <p>Loading...</p> 
@@ -17,7 +21,13 @@
 
     <footer>
 
-    <script src="js/main.js"></script>
+      <script>
+        require("jquery");
+        require("popper.js");
+        require("bootstrap");
+      </script>
+
+      <script src="js/main.js"></script>
     </footer>
   </body>
 </html>
